--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
 </head>
 
 <body>
+    <nav>
+        <img src="" alt="logo Booki">
+
+        <ul>
+            <li><a href="">Hébergements</a></li>
+            <li><a href="">Activités</a></li>
+        </ul>
+    </nav>
     <div class="main-container">
-        <header></header>
+        <header>
+
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
@@ -89,7 +99,11 @@
                 </section>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <article>
+                <h3>A propos</h3>
+            </article>
+        </footer>
     </div>
 </body>
 
