--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 <body>
     <div class="main-container">
         <header>
-            <img src="images/Logo.png" alt="logo Booki">
+            <nav>
+                <img src="images/Logo.png" alt="logo Booki" class="logo">
 
-            <ul>
-                <li><a href="#hebergements">Hébergements</a></li>
-                <li><a href="#activites">Activités</a></li>
-            </ul>
+                <ul>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites">Activités</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <section>
