--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         </a>
                     </div>
                     <div class="hebergements-title">
-                        <h3 class="section-title">Afficher plus</h3>
+                        <h3>Afficher plus</h3>
                     </div>
 
             </section>
