--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <input type="text" class="recherche-input" placeholder="Marseille, France">
-                    <button class="recherche-button">Rechercher</button>
+                    <button class="recherche-button">
+                        <span class="text">Rechercher</span>
+                        <i class="fas fa-search icon"></i>
+                    </button>
                 </div>
                         <!--simplifiez ca en div class=bouton-->
                 <div class="filterbar">
@@ -259,7 +262,7 @@
                                 <img src="images/vieux.png" alt="Port">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Vieux-Port</h3>
+                                        <p class="card-title">Vieux-Port</p>
                                     </div>
                                 </div>
                             </article>
@@ -269,7 +272,7 @@
                                 <img src="images/pomegues.png" alt="chateau">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Fort de Pomègues</h3>
+                                        <p class="card-title">Fort de Pomègues</p>
                                     </div>
                                 </div>
                             </article>
@@ -279,7 +282,7 @@
                                 <img src="images/calanques.png" alt="falaises">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Parc national des Calanques</h3>
+                                        <p class="card-title">Parc national des Calanques</p>
                                     </div>
                                 </div>
                             </article>
@@ -289,7 +292,7 @@
                                 <img src="images/dame.png" alt="ville">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
+                                        <p class="card-title">Notre-Dame-de-la-Garde</p>
                                     </div>
                                 </div>
                             </article>
